fix(UI): Show warning icon on unreadable delegated calendars
Previously a calendar whose events could not be read appeard as empty
(eg. a delegated calendar without access to events).

We now grey it out and show a warning icon with a meaningfull error message.
This aligns with apple calendar behaviour.

The option to hide the calendar completely was not choosen,
because the permission event triggers after the calendar list and would
cause a layout glitch.

Refs #368

--- a/resources/private/assets/less/agendav.less
+++ b/resources/private/assets/less/agendav.less
@@ -155,7 +155,7 @@ div.panel-body .buttons {
     }
 
     span.icons {
-      margin-right: 1px;
+      margin-right: 4px;
       color: #a0a0a0;
     }
 
@@ -174,6 +174,10 @@ div.panel-body .buttons {
 
     &.hidden_calendar, &.hidden_calendar i {
       color: #eaeaea !important;
+    }
+
+    &.hidden_calendar i.calendar_warning {
+      color: #d9822b !important;
     }
   }
 }
